Integrate AJAX request with loading and error handling

--- a/src/basket/containers/basket/basket.css
+++ b/src/basket/containers/basket/basket.css
@@ -7,3 +7,22 @@
   justify-content: space-around;
   flex-wrap: wrap;
 }
+
+.basket-status-wrapper {
+  margin: 20px 0px 20px 0px;
+  text-align: center;
+}
+
+.basket-checkout-button {
+  background-color: #fff;
+  border: 1px solid #D3D3D3;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 5px;
+}
+
+.basket-checkout-button:hover {
+  background-color: #ADD8E6;
+  cursor: pointer;
+}
